bad/assign_field_class_new_class_bool.example_compiler_output
ERROR
[1mbad/assign_field_class_new_class_bool.lat:9:14: [1;31merror: [0;1massigning to `Y` from incompatible type `boolean`[m
	(new C).fld = true;
	            [1;32m^[m
